# Eye_tracking

./: .gitignore  README.md  eye_tracking.smartsens-m1-evb
eye_track_demo/: CMakeLists.txt  README.md  demo_face.cpp.bak  eye_track.cpp  eye_track_model.cpp
eye_track_demo/app/: eye_tracking_app.cpp  eye_tracking_app.hpp  main.cpp
eye_track_demo/app_assets/: colorLUT.sscl
eye_track_demo/app_assets/models/: face_640x480.m1model.bak  pupil_a1_opset11.m1model  pupil_gap.m1model
eye_track_demo/cmake_config/: Paths.cmake
eye_track_demo/include/: common.hpp  utils.hpp
eye_track_demo/scripts/: run.sh
eye_track_demo/src/: osd-device.cpp  pipeline_image.cpp  scrfd_gray.cpp  utils.cpp
eye_track_demo/task/: attention.cpp  attention.hpp  attention_task.cpp  attention_task.hpp  eye_tracking.cpp  eye_tracking.hpp  eye_tracking_task.cpp  eye_tracking_task.hpp  kalman.hpp  tracking.cpp  tracking.hpp  tracking_task.cpp  tracking_task.hpp  types.hpp
training/: pupil_a1_best.pth  pupil_a1_opset11.onnx  pupil_gap.pth  pupil_gap_opset11.onnx  train.py
